[project]
name = "bibiflags"
version = "0.1.1"
description = "Import YAML configs into Arguments for Python"
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]
dependencies = [
    "PyYAML>=6.0.1",
    "OmegaConf>=2.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]
