[project]
name = "bibiflags"
version = "0.1.1"
description = "Import YAML configs into Arguments for Python"
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bibiparrot/bibiflags"
Issues = "https://github.com/bibiparrot/bibiflags/issues"

dependencies = [
    "PyYAML>=6.0.1",
    "OmegaConf>=2.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]
