[project]
name = "bibiflags"
version = "0.1.3"
description = "Import YAML configs into Arguments for Python"
authors = [
    {name = "Chunqi SHI", email = "chunqishi@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0.1"
]
requires-python = ">=3.8"
license = {text = "MIT"}


[project.urls]
Homepage = "https://github.com/bibiparrot/bibiflags"
Issues = "https://github.com/bibiparrot/bibiflags/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]
